# anjumanlar.com

./: .editorconfig  .env.example  .env.prod.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  LAUNCH_CHECKLIST.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07633eb6077c_phase1_1_7_audit_logs.py  1b1d75ce36ca_phase7_1_blog_posts.py  7fa9c72dea43_phase2_2_1_author_profiles_categories_.py  90ed5d5ed444_phase1_1_1_users_refresh_tokens_auth_.py  a1b2c3d4e5f6_site_ornament.py  b2c3d4e5f6a7_site_animations.py  c3d4e5f6a7b8_review_categories.py  c4f1a2b3d5e6_hard_delete_users_books.py  d7e2f3a4b5c6_book_co_authors.py  e378a40e7057_phase4_3_orders_seq.py  e7fbd9dd2a5e_phase4_1_orders_payments_libraries_.py  e8f3c4d5a6b7_site_settings.py  f9a4d5b6c7e8_review_requests.py
backend/app/: config.py  dependencies.py  main.py
backend/app/api/v1/: router.py
backend/app/core/: exceptions.py  limiter.py  pagination.py  security.py
backend/app/db/: base.py  session.py
backend/app/integrations/: meilisearch_client.py  minio_client.py
backend/app/integrations/payme/: client.py  errors.py
backend/app/models/: __init__.py  audit_log.py  auth_token.py  author_profile.py  blog_post.py  book.py  book_category.py  category.py  order.py  payment.py  refresh_token.py  review.py  review_category.py  review_request.py  site_settings.py  user.py  user_library.py  wishlist.py  withdrawal.py
backend/app/schemas/: audit.py  auth.py  author.py  blog.py  book.py  category.py  library.py  order.py  review.py  review_category.py  review_request.py  site_settings.py  wishlist.py  withdrawal.py
backend/app/scripts/: create_admin.py  create_superadmin.py  seed_categories.py  seed_demo_books.py  seed_phase2.py
backend/app/services/: __init__.py  audit_service.py  auth_service.py  author_service.py  blog_service.py  book_service.py  category_service.py  email_service.py  finance_service.py  library_service.py  order_service.py  payme_service.py  pdf_service.py  review_category_service.py  review_request_service.py  review_service.py  search_service.py  site_settings_service.py  stats_service.py  storage_service.py  user_service.py  wishlist_service.py  withdrawal_service.py
backend/app/tasks/: celery_app.py  email_tasks.py  order_tasks.py  pdf_tasks.py  review_tasks.py  search_tasks.py
backend/tests/: conftest.py  test_admin_audit.py  test_admin_stats.py  test_admin_users.py  test_auth_login.py  test_auth_password.py  test_auth_register.py  test_authors.py  test_blog.py  test_book_uploads.py  test_books.py  test_categories.py  test_email_service.py  test_health.py  test_library.py  test_models.py  test_orders.py  test_payme_webhook.py  test_pdf_service.py  test_phase4_edge_cases.py  test_reviews_wishlist.py  test_search.py  test_security.py  test_security_hardening.py  test_users_profile.py  test_withdrawals.py
(+267 files in other folders)
