[project]
name = "monografiya-backend"
version = "0.1.0"
description = "Monografiya — FastAPI backend"
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
    # Web framework
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.9",

    # Validation / settings
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.27",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",       # alembic sync engine

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.0.1",                 # passlib compat pin

    # Background jobs
    "celery>=5.3.6",
    "redis>=5.0.1",

    # Storage / search / external
    "minio>=7.2.4",
    "meilisearch>=0.31.0",
    "httpx>=0.27.0",

    # PDF / images
    "pillow>=10.2.0",
    "pypdf>=4.0.0",
    "reportlab>=4.1.0",

    # Email
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.3",

    # Misc
    "slowapi>=0.1.9",
    "python-slugify>=8.0.4",
    "structlog>=24.1.0",
    "orjson>=3.9.15",

    # Observability — wired only when SENTRY_DSN is set.
    "sentry-sdk[fastapi]>=2.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "types-python-jose",
    "types-passlib",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "C4",            # comprehensions
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length — handled by formatter
    "B008",          # FastAPI uses Depends() as default arg by design
    "UP046",         # PEP 695 type params break pydantic Generic models
    "RUF001",        # Cyrillic in strings — we intentionally ship Russian text
    "RUF002",        # Cyrillic/× in docstrings — same reason
    "RUF003",        # same, in comments
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
    "integration: hits external dev-stack services (MailHog, MinIO, live API) — skipped in CI",
    "audit_enabled: opt-in to real audit_service writes (default is no-op in conftest)",
]
